--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style.css">
   <title>Melinda's website</title>
+  <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <h1>Melinda Ivanov</h1>
+        <div class="logo">Melinda Ivanov</div>
       </a>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -26,21 +27,22 @@
 
   <main>
     <div class="jumbotron jumbotron-fluid">
-      <h1 class="display-4">Hi there!</h1>
-      <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
-      <p>I am a technical-minded back-end software engineer with focus on Java and related development stack holding MSc
-        degree in earth sciences. My experience includes taking major responsibility in academic projects in different
-        geospatial modeling and simulation and knowledge in server-side technology following quality code principals. My
-        goal is to join a company where I have the opportunity to develop user-friendly back-end services while
-        utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic interest
-        in innovative techniques. </p>
-    </div>
-    <div class="background-image" alt="background"></div>
+      <div class="container">
+        <h1 class="display-4">Hi there!</h1>
+        <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
+        <p>I am a technical-minded back-end software engineer with focus on Java and related development stack holding
+          MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in different
+          geospatial modeling and simulation and knowledge in server-side technology following quality code principals.
+          My goal is to join a company where I have the opportunity to develop user-friendly back-end services while
+          utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic
+          interest in innovative techniques. </p>
+      </div>
+      <div class="background-image" alt="background"></div>
   </main>
 
   <footer class="footer mt-auto py-3">
     <div class="container">
-      <span class="text-muted">@Copyright</span>
+      <span class="text-muted">© 2020 Melinda Ivanov</span>
     </div>
   </footer>
 </body>
