--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=Melinda, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/css/portfolio.style.css">
   <title>Melinda's website</title>
   <link rel="icon" href="assets/images/favicon.ico">
 </head>
@@ -18,9 +18,9 @@
         <div class="logo">Melinda Ivanov</div>
       </a>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -28,7 +28,7 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        
+        <p>portfolio</p>
       </div>
       <div class="background-image" alt="background"></div>
   </main>
