--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=Melinda, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/portfolio.style.css">
+  <link rel="stylesheet" href="assets/css/projects.style.css">
   <title>Melinda's website</title>
   <link rel="icon" href="assets/images/favicon.ico">
 </head>
@@ -19,7 +19,7 @@
       </a>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -28,11 +28,9 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <p>portfolio</p>
+        <p>port</p>
       </div>
-      <div class="background-image" alt="background"></div>
   </main>
-
 
   <footer class="footer mt-auto py-3">
     <div class="container">
