adding Linkedin bottom

--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Let's get connect!</h1>
+        <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin" src="assets/images/LI-In-Bug.png">
       </div>
   </main>
-
 
   <footer class="footer mt-auto py-3">
     <div class="container">
