changing logo and and adding columns/rows

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <div class="logo">Melinda Ivanov</div>
+        <div class="logo">MI</div>
       </a>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -30,6 +30,7 @@
       <div class="container">
         <p>port</p>
       </div>
+    </div>
   </main>
 
   <footer class="footer mt-auto py-3">
