--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <div class="logo">Melinda Ivanov</div>
+        <div class="logo">MI</div>
       </a>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -31,12 +31,14 @@
         <h1 class="display-4">Hi there!</h1>
         <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
         <p>I am a technical-minded back-end software engineer with focus on Java and related development stack holding
-          MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in different
+          MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in
+          different
           geospatial modeling and simulation and knowledge in server-side technology following quality code principals.
           My goal is to join a company where I have the opportunity to develop user-friendly back-end services while
           utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic
           interest in innovative techniques. </p>
       </div>
+    </div>
       <div class="background-image" alt="background"></div>
   </main>
 
