adding profile picture

--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Hi there!</h1>
-        <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
-        <p>I am a technical-minded back-end software engineer with focus on Java and related development stack holding
-          MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in
-          different
-          geospatial modeling and simulation and knowledge in server-side technology following quality code principals.
-          My goal is to join a company where I have the opportunity to develop user-friendly back-end services while
-          utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic
-          interest in innovative techniques. </p>
+        <div class="row">
+          <div class="col-sm-6">
+            <h1 class="display-4">Hi there!</h1>
+            <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
+            <p>I am a technical-minded back-end software engineer with focus on Java and related development stack
+              holding MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in different geospatial modeling and simulation and knowledge in server-side technology following quality code principals. My goal is to join a company where I have the opportunity to develop user-friendly back-end services while utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
+          </div>
+          <div class="col-sm-6">
+            <img src="assets/images/profile.jpg" alt="Profile" class="profile">
+          </div>
+        </div>
       </div>
     </div>
-      <div class="background-image" alt="background"></div>
   </main>
 
   <footer class="footer mt-auto py-3">
