--- a/contact.html
+++ b/contact.html
@@ -28,25 +28,23 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <div class="col-sm-12">
-          <div class="row">
-            <div class='col-md-6'>
-              <h1 class="display-4">Let's connect!</h1>
-              <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
+        <div class="row">
+          <div class='col-sm-6'>
+            <h1 class="display-4">Let's connect!</h1>
+            <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
                 src="assets/images/LI-In-Bug.png"></a>
-            </div>
-            <div class='col-md-6'>
-              <form>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Email address</label>
-                  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Example textarea</label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-              </form>
-            </div>
+          </div>
+          <div class='col-sm-6'>
+            <form>
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlTextarea1">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </form>
           </div>
         </div>
       </div>
