reposition profile picture

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               holding MSc degree in earth sciences. My experience includes taking major responsibility in academic projects in different geospatial modeling and simulation and knowledge in server-side technology following quality code principals. My goal is to join a company where I have the opportunity to develop user-friendly back-end services while utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
           </div>
           <div class="col-sm-6">
-            <img src="assets/images/profile.jpg" alt="Profile" class="profile">
+            <img src="assets/images/profile.jpg" alt="Profile" class="center">
           </div>
         </div>
       </div>
