trying out cards

--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,26 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <p>port</p>
-        <!-- Add dropdown menu -->
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+              <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"></a>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                <img class="card-img-top" src="assets/images/husky.jpg" alt="hangman"></a>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
