changing back to 1 css file

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/contact.style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Melinda's website</title>
   <link rel="icon" href="assets/images/favicon.ico">
 </head>
@@ -32,7 +32,7 @@
           <div class='col-sm-6'>
             <h1 class="display-4">Let's connect!</h1>
             <a href="https://www.linkedin.com/in/melinda-ivanov/"> <img border="0" alt="Linkedin"
-                src="assets/images/LI-In-Bug.png"></a>
+                src="assets/images/LI-In-Bug.png" class="linkedin"></a>
           </div>
           <div class='col-sm-6'>
             <form>
