section added and specific card width deleted

--- a/projects.html
+++ b/projects.html
@@ -26,93 +26,109 @@
   </header>
 
   <main>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager"><H1>Hangman</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"> </a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+    <section>
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <H1>Hangman</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"> </a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <H1>Jungle game</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                  <H1>Assassin manager</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                  <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="aggasingame"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager"><H1>Jungle game</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
+                  <H1>Huffmann coding</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
+                  <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
+                  <H1>Guitar Hero</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
+                  <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
+                  <H1>20 Questions</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
+                  <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager"><H1>Assassin manager</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="aggasingame"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman"><H1>Huffmann coding</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
-                <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero"><H1>Guitar Hero</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
-                <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions"><H1>20 Questions</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
-                <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver"><H1>Anagram solver</H1></a>
-              <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
-                <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram"></a>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                  card's content.</p>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
+                  <H1>Anagram solver</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
+                  <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram"></a>
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 
   <footer class="footer mt-auto py-3">
