adding conference and recepie book projects and organizing projects

--- a/projects.html
+++ b/projects.html
@@ -32,40 +32,43 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="card">
+                <a href="https://github.com/jnsmelinda/conference-application">
+                  <H1>Conference registry</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/conference-application">
+                  <img class="card-img-top" src="assets/images/conference.jpg" alt="conference"></a>
+                <div class="card-body">
+                  <p class="card-text">Applicant registry webservice using Spring Boot, Spring MVC, JSP or Thymeleaf and
+                    HTML.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                   <H1>Hangman</H1>
                 </a>
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
                   <img class="card-img-top" src="assets/images/hangman.png" alt="hangman"> </a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">Implementing an evil hangman application which manages and modifies the state of
+                    the game on-the-fly and it tries to trick the user. It starts the game with a set of words instead
+                    of one word and reduces the set to the words what are less likely to be discovered after each guess, until the
+                    player looses or only one word is in the set.</p>
                 </div>
               </div>
             </div>
+
             <div class="col-sm-4">
               <div class="card">
-                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                  <H1>Jungle game</H1>
+                <a href="https://github.com/jnsmelinda/Recipe-book">
+                  <H1>Recipe book</H1>
                 </a>
-                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
-                  <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
+                <a href="https://github.com/jnsmelinda/Recipe-book">
+                  <img class="card-img-top" src="assets/images/recipe-book-free-clipart-recipe-clip-art-300_300.jpg" alt="Recipe-book"></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="card">
-                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                  <H1>Assassin manager</H1>
-                </a>
-                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
-                  <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="aggasingame"></a>
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">REST based CRUDS webservice using Spring Data REST (Spring Boot, Spring MVC, Spring Data,
+                    JPA).</p>
                 </div>
               </div>
             </div>
@@ -79,8 +82,7 @@
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/Huffman">
                   <img class="card-img-top" src="assets/images/binary-tree.png" alt="Huffman"></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">The application compresses and decompresses text files by using Huffman Coding based on the frequency of the characters.</p>
                 </div>
               </div>
             </div>
@@ -92,8 +94,9 @@
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/GuitarHero">
                   <img class="card-img-top" src="assets/images/guitar.jpeg" alt="guitarhero"></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">Guitar simulator that allows the user to play on a guitar by using the
+                    keyboard of the computer ("keytar"). The application constructs notes on the chromatic scale and the
+                    client can play these notes by pressing different keys on the keyboard.</p>
                 </div>
               </div>
             </div>
@@ -105,8 +108,11 @@
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/20Questions">
                   <img class="card-img-top" src="assets/images/tree.jpeg" alt="20Questions"></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">Implementing a yes-no question game in which the player thinks of an object and
+                    the
+                    computer tries to guess it by asking yes-no questions. The computer becomes smarter after each
+                    failed round
+                    and learns the new question-answer pair to win more future games.</p>
                 </div>
               </div>
             </div>
@@ -120,8 +126,35 @@
                 <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AnagramSolver">
                   <img class="card-img-top" src="assets/images/fractal3.png" alt="anagram"></a>
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                  <p class="card-text">The application creates anagrams using recursive backtracking over dictionary to find all combinations of words that have the same letters as a given phrase</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <H1>Jungle game</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/HangmanManager">
+                  <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
+                <div class="card-body">
+                  <p class="card-text">Implementing a game/simulation with animals in it like a jungle. Each species
+                    move and
+                    behave in different ways in the 2D environment. They meet, feed, move, sleep and kill each other
+                    until only
+                    one kind of animal will rule the jungle.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="card">
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                  <H1>Assassin manager</H1>
+                </a>
+                <a href="https://github.com/jnsmelinda/UWCSE143/tree/master/AssassinManager">
+                  <img class="card-img-top" src="assets/images/LinkedList-in-Java.png" alt="aggasingame"></a>
+                <div class="card-body">
+                  <p class="card-text">Assassin manager keeps track of who is stalking whom and the history of who killed whom. This Java program starts with a circular chain of assassination targets what is linked list, called the “kill ring”.</p>
                 </div>
               </div>
             </div>
