--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand">
         <div class="logo">MI</div>
       </a>
       <ul>
@@ -33,8 +33,14 @@
             <div class="col-sm-6">
               <h1 class="display-4">Hi there!</h1>
               <p class="lead">My name is Melinda Ivanov, nice to meet you.</p>
-              <p>I am a technical-minded full-stack software engineer holding MSc degree in earth sciences. My experience includes taking major responsibility in academic
-                projects in different geospatial modeling and simulation and knowledge in server- and client-side technology following quality code principals. My goal is to join a company where I have the opportunity to develop user-friendly applications while utilizing both my engineering and science qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
+              <article>
+                <p>I am a technical-minded full-stack software engineer holding MSc degree in earth sciences. My
+                  experience includes taking major responsibility in academic
+                  projects in different geospatial modeling and simulation and knowledge in server- and client-side
+                  technology following quality code principals. My goal is to join a company where I have the
+                  opportunity to develop user-friendly applications while utilizing both my engineering and science
+                  qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
+              </article>
             </div>
             <div class="col-sm-6">
               <img src="assets/images/profile.jpg" alt="Profile" class="center">
