--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand">
         <div class="logo">MI</div>
       </a>
       <ul>
@@ -45,6 +45,7 @@
                   <label for="exampleFormControlTextarea1">Message</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
               </form>
             </div>
           </div>
