--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav class="navbar navbar-light bg-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand">
         <div class="logo">MI</div>
       </a>
       <ul>
