--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
             <div class='col-sm-6'>
               <form>
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Email</label>
+                  <label for="subject">Email</label>
                   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Message</label>
+                  <label for="subject">Message</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
