--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>I am a technical-minded full-stack software engineer holding MSc degree in earth sciences. My
                   experience includes taking major responsibility in academic
                   projects in different geospatial modeling and simulation and knowledge in server- and client-side
-                  technology following quality code principals. My goal is to join a company where I have the
+                  technology following quality code principles. My goal is to join a company where I have the
                   opportunity to develop user-friendly applications while utilizing both my engineering and science
                   qualifications. I have fast learning ability and enthusiastic interest in innovative techniques. </p>
               </article>
