jungle link fixed

--- a/projects.html
+++ b/projects.html
@@ -146,19 +146,15 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <a href="https://github.com/jnsmelinda/UWCSE142">
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame">
                                     <H1>Jungle game</H1>
                                 </a>
-                                <a href="https://github.com/jnsmelinda/UWCSE142">
+                                <a href="https://github.com/jnsmelinda/UWCSE142/tree/master/JungleGame">
                                     <img class="card-img-top" src="assets/images/husky.jpg" alt="junglegame"></a>
                                 <div class="card-body">
                                     <p class="card-text">Implementing a game/simulation with animals in it like a
-                                        jungle. Each species
-                                        move and
-                                        behave in different ways in the 2D environment. They meet, feed, move, sleep and
-                                        kill each other
-                                        until only
-                                        one kind of animal will rule the jungle.</p>
+                                        jungle. Each species move and behave in different ways in the 2D environment. They meet, feed, move, sleep and
+                                        kill each other until only one kind of animal will rule the jungle.</p>
                                 </div>
                             </div>
                         </div>
